# NodeGuardian

./: MIGRATION_SUMMARY.md  PROJECT_SUMMARY.md  PYTHON_ARCHITECTURE.md  README.md  REFACTOR_SUMMARY.md  arch.md  deploy.sh  shell-operator-usage.md
crd/: alerttemplate-crd.yaml  nodeguardianrule-crd.yaml
deploy/: Dockerfile  configmap.yaml  deployment.yaml  namespace.yaml  rbac.yaml
docs/: CONFIGURATION.md
examples/: alert-templates.yaml  disk-space-alert.yaml  email-config-example.yaml  emergency-eviction.yaml  high-load-isolation.yaml  unified-config-example.yaml
hooks/: 001-nodeguardian-controller.sh  002-alert-manager.sh  003-recovery-manager.sh
hooks/common/: functions.sh
python-version/: README.md  deploy.sh  pyproject.toml
python-version/deploy/: Dockerfile  deployment.yaml
python-version/hooks/: nodeguardian_controller.py
python-version/src/nodeguardian/: __init__.py  alert_manager.py  common.py  rule_engine.py
python-version/tests/: test_rule_engine.py
scripts/: README.md  alert_manager.py  config-manager.py  config_loader.py  nodeguardian_controller.py  recovery_manager.py  sendmail.py  test_email.py  test_integration.py
